--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <h2 class="section-title">About me</h2>
       <p>Hello, I'm Mary Katchen.</p><p>I am into Fashion Marketing & Merchandising <br>I am Real Estate Student at Sacred Heart University.</p>
     </section>
-    <h2 class="section-title" data-reveal>Gallery <a style="text-decoration: none;" href="https://www.linkedin.com/in/mary-katchen-4854b7277/recent-activity/all/?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3B29Kf5A2ISi%2BFubUgrI1%2Ftg%3D%3D" target="_blank"><span style="float:right;font-size:17px;color:var(--muted-2);font-weight:600;">View all →</span></a></h2>
+    <h2 class="section-title" data-reveal>Gallery <a style="text-decoration: none;" href="https://www.linkedin.com/in/mary-katchen-4854b7277/recent-activity/all/?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3B29Kf5A2ISi%2BFubUgrI1%2Ftg%3D%3D" target="_blank"><span class="glow" style="float:right;font-size:17px;color:var(--muted-2);font-weight:600;">View all →</span></a></h2>
     <div class="projects" data-reveal role="list">
       <a style=" text-decoration:none ;" href="#" target="_blank">
         <article class="project-card" role="listitem">
@@ -46,7 +46,7 @@
             <div class="project-title">Evening meet</div>
             <div class="project-body">
               <div class="project-meta">Last night, Sacred Heart University Jack Welch College of Business & Technology/Sacred Heart University's Fashion Club members were able to spend an evening with legendary retailers Bob & Dana Mitchell at Mitchells Stores. Our Fashion Marketing & Merchandising students had the opportunity to experience this premiere luxury organization's retailing & merchandising, digital marketing, and data science operations, while learning about the "Hug Your Customers" philosophy. Many thanks to Bob, Dana, Scott, and Bill for their hospitality and support! ⭐</div>
-              <div style="color:var(--muted-2);font-size:18px;">→</div>
+              <div class="glow" style="color:var(--muted-2);font-size:18px;">→</div>
             </div>
           </div>
         </article>
@@ -58,7 +58,7 @@
             <div class="project-title">Paris Trip</div>
             <div class="project-body">
               <div class="project-meta">Kicking off another Fashion Marketing Global Luxury Retailing study abroad trip to Paris with our Sacred Heart University Jack Welch College of Business & Technology students at PARIS AMERICAN ACADEMY!</div>
-              <div style="color:var(--muted-2);font-size:18px;">→</div>
+              <div class="glow" style="color:var(--muted-2);font-size:18px;">→</div>
             </div>
           </div>
         </article>
