--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
       </div>
       <div  style=" padding-left:18px; display:flex; align-items:center;border:1px solid var(--card-border); border-radius: 8px;">
-        <div style="width:36px;height:36px;border-radius:8px;background:#0b0b0b;border:1px solid var(--card-border);display:flex;align-items:center;justify-content:center;">P</div>
+        <div style="width:36px;height:36px;border-radius:8px;background:#0b0b0b;border:1px solid var(--card-border);display:flex;align-items:center;justify-content:center;margin-right:12px;">P</div>
         <div>
           <div style="color:var(--white);font-weight:700;font-size:17px;">Persuasion skills</div>
           <div style="color:var(--muted-2);font-size:12px;padding-right:12px">At Sacred Heart University</div>
